--- a/ViLibMain/ViLibMain/ViLibMain.csproj
+++ b/ViLibMain/ViLibMain/ViLibMain.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{411012B4-6C66-4F38-A961-C7183FE4FE75}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>ViLibMain</RootNamespace>
     <AssemblyName>ViLibMain</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
